# media-organizer

./: .gitignore  README.md  build_exe.py  cursor_prompt_pack.txt  entry.py  media_ingest_sdd.txt  pyproject.toml  requirements.txt
.cursor/: context  implementation_plan.txt  media_ingest_spec.txt  rules
media_ingest/: __init__.py  __main__.py  cli.py  database.py  organizer.py  pipeline.py  scanner.py  utils.py
media_ingest.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
media_organizer/: __init__.py  __main__.py  cli.py  hashing.py  metadata.py  organizer.py  pipeline.py  utils.py
tests/: test_database.py  test_hashing.py  test_metadata.py  test_organizer.py  test_pipeline.py  test_scanner.py
