[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "media-organizer"
version = "0.1.0"
description = "Ingest and organize media files into a structured archive"
requires-python = ">=3.11"
dependencies = [
    "blake3>=0.4.1",
    "Pillow>=10.0.0",
    "tqdm>=4.66.0",
    "imagehash>=4.3.1",
    "reverse_geocoder>=1.5",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
media-organizer = "media_organizer.cli:main"

[tool.setuptools.packages.find]
include = ["media_organizer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
